--- a/signal-example-2.ipynb
+++ b/signal-example-2.ipynb
@@ -21,6 +21,7 @@
     "\n",
     "axes = None\n",
     "fig = None\n",
+    "time = None\n",
     "\n",
     "start_time = datetime(2025, 2, 21, 12, 0, 0)\n",
     "current_time = start_time\n",
@@ -29,17 +30,13 @@
     "# we have a baseline in xyz coordinates\n",
     "vla = EarthLocation.of_site('vla')\n",
     "source_ra = 10*u.hourangle\n",
-    "source_dec = -30*u.deg\n",
+    "source_dec = 30*u.deg\n",
     "source = SkyCoord(ra=source_ra, dec=source_dec, frame='icrs')\n",
     "\n",
-    "\n",
-    "antenna_1_pos = np.array([0,0,0])\n",
-    "antenna_2_pos = np.array([400,200,10])\n",
-    "\n",
-    "obs_frequency = 1_000_000\n",
+    "obs_frequency = 500_000\n",
     "obs_wavelength = 3.00 * 10 ** 8 / obs_frequency\n",
     "\n",
-    "time_step = 1 / (10 * obs_frequency)\n",
+    "time_step = 1 / (2 * obs_frequency)\n",
     "\n",
     "\n",
     "# convert to x,y,z coordinates where z points to the NCP\n",
@@ -96,15 +93,23 @@
     "        self.id = antenna_id\n",
     "        self.baseline_enu = baseline_enu\n",
     "        self.baseline_xyz = np.matmul(transform_enu_xyz, baseline_enu)\n",
+    "        print(f\"baseline length is {np.linalg.norm(self.baseline_xyz)}\")\n",
     "        Antenna.all_antennae.append(self)\n",
     "    \n",
-    "    def get_signal_delay(self, transform_xyz_uvw, obs_wavelength) -> float:\n",
-    "        baseline_uvw = np.matmul(transform_xyz_uvw, self.baseline_xyz) / obs_wavelength\n",
+    "    def get_signal_delay(self, transform_xyz_uvw: np.array) -> float:\n",
+    "        baseline_uvw = np.matmul(transform_xyz_uvw, self.baseline_xyz)\n",
+    "        print(f\"Baseline uvw has length {np.linalg.norm(baseline_uvw)}\")\n",
+    "        # The vector w points towards the source - so B.s = B.w = (Bx, By, Bz) . (0, 0, 1) = Bz\n",
+    "        # w is also a unit vector so to find the angle between these two vectors we just divide by the\n",
+    "        # length of the baseline.\n",
+    "        # We then need to take the negative as the signal is coming from the source so it is traversing the\n",
+    "        # path in reverse\n",
     "        angle_degrees = np.arccos(baseline_uvw[2] / np.linalg.norm(baseline_uvw)) * 360 / (2 * np.pi)\n",
-    "        delay_distance = baseline_uvw[2]\n",
-    "        # geometric delay. delay_distance is in wavelengths so use baseline_uvw[2] * lambda (wavelength in m) / c \n",
-    "        # to get delay time\n",
-    "        Tg = delay_distance * obs_wavelength / (3.00 * 10 ** 8)\n",
+    "        print(angle_degrees * 360 / ( 2 * np.pi))\n",
+    "        delay_distance = -baseline_uvw[2]\n",
+    "        print(delay_distance) \n",
+    "        # geometric delay\n",
+    "        Tg = delay_distance / (3.00 * 10 ** 8)\n",
     "        return Tg\n",
     "\n",
     "    @classmethod\n",
@@ -113,33 +118,32 @@
     "\n",
     "antennae = [\n",
     "    Antenna(1, np.array([0,0,0])),\n",
-    "    Antenna(2, np.array([4000, 200, 10])),\n",
+    "    Antenna(2, np.array([4000, 200, 0])),\n",
+    "    Antenna(3, np.array([-4000, -200, 10])),\n",
     "]\n",
     "signals = [\n",
     "    Signal(obs_frequency,1, 0, source_ra, source_dec),\n",
-    "    Signal(obs_frequency, 1, np.pi/2, source_ra + 10 * u.hourangle, source_dec + 5 * u.deg),\n",
-    "    Signal(obs_frequency, 2, 0, source_ra - 20 * u.hourangle, source_dec + 10 * u.deg),\n",
+    "    Signal(obs_frequency * 0.8, 4, np.pi/2, source_ra + 10 * u.hourangle, source_dec + 5 * u.deg),\n",
+    "    Signal(obs_frequency * 1.2, 2, np.pi / 4, source_ra - 20 * u.hourangle, source_dec + 10 * u.deg),\n",
     "]\n",
     "\n",
     "\n",
     "received_signals = defaultdict(list)\n",
     "\n",
     "async def telescope_signal_receivers():\n",
-    "    print(\"Starting telescope signal receiving\")\n",
+    "    global time\n",
     "    time = 0\n",
-    "\n",
+    "    global current_time\n",
     "    \n",
-    "    print(\"done initialization\")\n",
     "    while True:\n",
     "        all_antennae = Antenna.get_all_instances()\n",
     "        all_signals = Signal.get_all_instances()\n",
     "\n",
-    "        \n",
+    "        current_time = start_time + timedelta(seconds=time)    \n",
     "        obs_time = Time(current_time.isoformat(), location=vla)\n",
     "\n",
     "        obs_local_sidereal_time = obs_time.sidereal_time(kind='mean')\n",
     "\n",
-    "        \n",
     "        for antenna in all_antennae:\n",
     "            signal_combined = 0\n",
     "            for signal in all_signals:\n",
@@ -149,18 +153,18 @@
     "                transform_xyz_uvw = np.array([\n",
     "                    [np.sin(hour_angle), np.cos(hour_angle), 0],\n",
     "                    [-np.sin(signal.source_dec) * np.cos(hour_angle), np.sin(signal.source_dec) * np.sin(hour_angle), np.cos(signal.source_dec)],\n",
-    "                    [np.cos(hour_angle) * np.cos(signal.source_dec), np.sin(hour_angle) * np.cos(signal.source_dec), np.sin(signal.source_dec)]    \n",
+    "                    [np.cos(hour_angle) * np.cos(signal.source_dec), -np.sin(hour_angle) * np.cos(signal.source_dec), np.sin(signal.source_dec)]    \n",
     "                ])\n",
     "                \n",
     "                # replace obs_wavelength with signal.wavelength?\n",
-    "                antenna_delay = antenna.get_signal_delay(transform_xyz_uvw, obs_wavelength)\n",
+    "                antenna_delay = antenna.get_signal_delay(transform_xyz_uvw)\n",
     "                signal_combined += signal.get_signal_value(time - antenna_delay)\n",
     "            received_signals[antenna.id].append(signal_combined)\n",
     "            if len(received_signals[antenna.id]) >= 100:\n",
     "                received_signals[antenna.id].pop(0)\n",
     "\n",
     "        time += time_step\n",
-    "        await asyncio.sleep(0.01)\n",
+    "        await asyncio.sleep(0)\n",
     "    \n",
     "\n",
     "def update_plot():\n",
@@ -175,18 +179,25 @@
     "\n",
     "    plt.legend()\n",
     "    plt.show() \n",
-    "    plt.pause(0.001)\n",
+    "    plt.pause(0.00001)\n",
     "\n",
     "\n",
     "\n",
-    "\n",
-    "async def handle_signal_plot():\n",
-    "    \n",
+    "async def handle_signal_plot():    \n",
     "    while True:\n",
     "        update_plot()\n",
-    "        await asyncio.sleep(.001)\n",
+    "        await asyncio.sleep(.01)\n",
     "\n",
-    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "async def main():\n",
     "    print(\"starting main loop\")\n",
     "    await asyncio.gather(\n",
@@ -201,41 +212,197 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1",
+   "id": "2",
    "metadata": {},
    "outputs": [],
    "source": [
-    "received_signals[1][:10]"
+    "start_time"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2",
+   "id": "3",
    "metadata": {},
    "outputs": [],
    "source": [
-    "received_signals[2][:10]"
+    "current_time"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "3",
+   "id": "4",
    "metadata": {},
    "source": [
     "# Next Steps\n",
     "\n",
     "- Fringe patterns\n",
     "- Do correlation\n",
-    "- Make it move in the sky with time\n",
     "- Do the Fourier transform to try and get back our point sources\n",
-    "- Add documentation to all of this"
+    "- Add documentation to all of this\n",
+    "- Validations"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4",
+   "id": "5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "time_step"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "time"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7",
+   "metadata": {},
+   "source": [
+    "# Validations\n",
+    "\n",
+    "How can we validate this? Need to know more about the geometry. Use astropy to find the angle to the source and then try and calculate the delays analytically in original co-ordinate system.\n",
+    "\n",
+    "## Validation 1\n",
+    "The first validation - we will align the baseline with the signal. Then the signal will have to travel the |B|m and we can easily calculate the delay time as B / c.\n",
+    "This should align with the delay calculated by the antenna."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "obs_frame = AltAz(obstime=start_time, location=vla)\n",
+    "source_altaz = source.transform_to(obs_frame)\n",
+    "source_altaz"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "obs_time = Time(start_time.isoformat(), location=vla)\n",
+    "obs_local_sidereal_time = obs_time.sidereal_time(kind='mean')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "10",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# This is a unit vector that points towards the source\n",
+    "# The 90 + 360 - d comes from the fact that np.cos measures from the x-axis\n",
+    "# and the bearing is from the y-axis clockwise.\n",
+    "s_enu = np.array([np.cos((90 + 360 - source_altaz.az.degree) * 2 * np.pi/360) * np.cos(source_altaz.alt.degree * 2 * np.pi / 360),  np.sin((90 + 360 - source_altaz.az.degree) * 2 * np.pi / 360) * np.cos(source_altaz.alt.degree * 2 * np.pi / 360), np.sin(source_altaz.alt.degree * 2 * np.pi / 360)])\n",
+    "s_enu = s_enu / np.linalg.norm(s_enu)\n",
+    "s_enu"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "11",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "signal_aligned_baseline = np.array([-np.cos((90 + 360 - source_altaz.az.degree) * 2 * np.pi/360) * 4000 * np.cos(source_altaz.alt.degree * 2 * np.pi / 360), -np.sin((90 + 360 - source_altaz.az.degree) * 2 * np.pi/360) * 4000 * np.cos(source_altaz.alt.degree * 2 * np.pi / 360), -4000 * np.sin(source_altaz.alt.degree * 2 * np.pi / 360)])\n",
+    "signal_aligned_baseline = signal_aligned_baseline * 4000 / np.linalg.norm(signal_aligned_baseline)\n",
+    "antennae_signal_aligned_baseline = Antenna(4, signal_aligned_baseline)\n",
+    "\n",
+    "# Take the negative as the signal is coming from the source and s_enu points towards the source\n",
+    "delay_distance = np.dot(-s_enu, antennae_signal_aligned_baseline.baseline_enu)\n",
+    "delay_time = delay_distance / (3.00 * 10 ** 8)\n",
+    "\n",
+    "print(delay_distance)\n",
+    "print(delay_time)\n",
+    "\n",
+    "assert np.isclose(delay_distance, np.linalg.norm(signal_aligned_baseline))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "12",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Check that signal_aligned_baseline is aligned with the signal\n",
+    "# and that s_enu is aligned with the signal.\n",
+    "\n",
+    "# If so, all should pass and there will be no output to this cell.\n",
+    "# Otherwise there will be an assertionerror.\n",
+    "assert all([np.isclose(np.arctan(signal_aligned_baseline[1] / signal_aligned_baseline[0]) * 360 / (2 * np.pi), - (source_altaz.az.degree - 270)),\n",
+    "    np.isclose(np.arctan(s_enu[1] / s_enu[0]) * 360 / (2 * np.pi), -(source_altaz.az.degree - 270)),\n",
+    "     np.isclose(np.arcsin(s_enu[2]) * 360 / (2 * np.pi), source_altaz.alt.degree),\n",
+    "     np.isclose(np.arcsin(signal_aligned_baseline[2] / np.linalg.norm(signal_aligned_baseline)) * 360 / (2 * np.pi), - source_altaz.alt.degree),\n",
+    "    ] \n",
+    ")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "13",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Code from above that calculates the delay\n",
+    "# This delay should match the delay_time calculated above.\n",
+    "\n",
+    "obs_time = Time(start_time.isoformat(), location=vla)\n",
+    "obs_local_sidereal_time = obs_time.sidereal_time(kind='mean')\n",
+    "\n",
+    "for antenna in [antennae_signal_aligned_baseline]:\n",
+    "    signal_combined = 0\n",
+    "    for signal in [signals[0]]:\n",
+    "        hour_angle = obs_local_sidereal_time - signal.source_ra\n",
+    "        \n",
+    "        transform_xyz_uvw = np.array([\n",
+    "            [np.sin(hour_angle), np.cos(hour_angle), 0],\n",
+    "            [-np.sin(signal.source_dec) * np.cos(hour_angle), np.sin(signal.source_dec) * np.sin(hour_angle), np.cos(signal.source_dec)],\n",
+    "            [np.cos(hour_angle) * np.cos(signal.source_dec), -np.sin(hour_angle) * np.cos(signal.source_dec), np.sin(signal.source_dec)]    \n",
+    "        ])\n",
+    "\n",
+    "        # This should be approximately 1 so that it does not change the baseline length when transforming the coordinates.\n",
+    "        assert np.isclose(np.linalg.det(transform_xyz_uvw), 1)\n",
+    "        \n",
+    "        # replace obs_wavelength with signal.wavelength?\n",
+    "        antenna_delay = antenna.get_signal_delay(transform_xyz_uvw)\n",
+    "\n",
+    "antenna_delay"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "14",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "assert np.isclose(delay_time, antenna_delay)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "15",
    "metadata": {},
    "outputs": [],
    "source": []
