black and reformat

--- a/signal-example-2.ipynb
+++ b/signal-example-2.ipynb
@@ -26,15 +26,15 @@
     "start_time = datetime(2025, 2, 21, 12, 0, 0)\n",
     "current_time = start_time\n",
     "\n",
-    "# Let's start with simple example \n",
+    "# Let's start with simple example\n",
     "# we have a baseline in xyz coordinates\n",
-    "vla = EarthLocation.of_site('vla')\n",
-    "source_ra = 10*u.hourangle\n",
-    "source_dec = 30*u.deg\n",
-    "source = SkyCoord(ra=source_ra, dec=source_dec, frame='icrs')\n",
+    "vla = EarthLocation.of_site(\"vla\")\n",
+    "source_ra = 10 * u.hourangle\n",
+    "source_dec = 30 * u.deg\n",
+    "source = SkyCoord(ra=source_ra, dec=source_dec, frame=\"icrs\")\n",
     "\n",
-    "obs_frequency = 500_000\n",
-    "obs_wavelength = 3.00 * 10 ** 8 / obs_frequency\n",
+    "obs_frequency = 50_000\n",
+    "obs_wavelength = 3.00 * 10**8 / obs_frequency\n",
     "\n",
     "time_step = 1 / (2 * obs_frequency)\n",
     "\n",
@@ -46,20 +46,27 @@
     "# think of projection of NU axes onto z.\n",
     "# x is y X z\n",
     "latitude = vla.lat\n",
-    "transform_enu_xyz = np.array([\n",
-    "    [0, -np.sin(latitude), np.cos(latitude)], \n",
-    "    [1, 0, 0], \n",
-    "    [0, np.cos(latitude), np.sin(latitude)]\n",
-    "])\n",
-    "\n",
+    "transform_enu_xyz = np.array(\n",
+    "    [\n",
+    "        [0, -np.sin(latitude), np.cos(latitude)],\n",
+    "        [1, 0, 0],\n",
+    "        [0, np.cos(latitude), np.sin(latitude)],\n",
+    "    ]\n",
+    ")\n",
     "\n",
     "\n",
     "class Signal:\n",
     "\n",
     "    all_signals = []\n",
-    "    \n",
     "\n",
-    "    def __init__(self, frequency: float, amplitude: float, phase_shift: float, source_ra: float, source_dec: float):\n",
+    "    def __init__(\n",
+    "        self,\n",
+    "        frequency: float,\n",
+    "        amplitude: float,\n",
+    "        phase_shift: float,\n",
+    "        source_ra: float,\n",
+    "        source_dec: float,\n",
+    "    ):\n",
     "        self.frequency = frequency\n",
     "        self.amplitude = amplitude\n",
     "        self.phase_shift = phase_shift\n",
@@ -69,95 +76,117 @@
     "        Signal.all_signals.append(self)\n",
     "\n",
     "    def get_signal_value(self, time: float) -> float:\n",
-    "        signal = self.amplitude * math.cos(2 * math.pi * self.frequency * time + self.phase_shift)\n",
+    "        signal = self.amplitude * math.cos(\n",
+    "            2 * math.pi * self.frequency * time + self.phase_shift\n",
+    "        )\n",
     "        return signal\n",
+    "\n",
+    "    def get_xyz_uvw_transform(self, local_sidereal_time) -> np.array:\n",
+    "        hour_angle = obs_local_sidereal_time - self.source_ra\n",
+    "        transform_xyz_uvw = np.array(\n",
+    "            [\n",
+    "                [np.sin(hour_angle), np.cos(hour_angle), 0],\n",
+    "                [\n",
+    "                    -np.sin(signal.source_dec) * np.cos(hour_angle),\n",
+    "                    np.sin(signal.source_dec) * np.sin(hour_angle),\n",
+    "                    np.cos(signal.source_dec),\n",
+    "                ],\n",
+    "                [\n",
+    "                    np.cos(hour_angle) * np.cos(signal.source_dec),\n",
+    "                    -np.sin(hour_angle) * np.cos(signal.source_dec),\n",
+    "                    np.sin(signal.source_dec),\n",
+    "                ],\n",
+    "            ]\n",
+    "        )\n",
+    "        return transform_xyz_uvw\n",
     "\n",
     "    @classmethod\n",
     "    def get_all_instances(cls):\n",
     "        return cls.all_signals\n",
     "\n",
     "\n",
-    "    \n",
     "class Antenna:\n",
     "\n",
     "    all_antennae = []\n",
     "\n",
     "    color_map = {\n",
-    "        1: 'b',\n",
-    "        2: 'r',\n",
-    "        3: 'g',\n",
-    "        4: 'p',\n",
+    "        1: \"b\",\n",
+    "        2: \"r\",\n",
+    "        3: \"g\",\n",
+    "        4: \"p\",\n",
     "    }\n",
-    "    \n",
+    "\n",
     "    def __init__(self, antenna_id: int, baseline_enu: np.array):\n",
     "        self.id = antenna_id\n",
     "        self.baseline_enu = baseline_enu\n",
     "        self.baseline_xyz = np.matmul(transform_enu_xyz, baseline_enu)\n",
-    "        print(f\"baseline length is {np.linalg.norm(self.baseline_xyz)}\")\n",
     "        Antenna.all_antennae.append(self)\n",
-    "    \n",
-    "    def get_signal_delay(self, transform_xyz_uvw: np.array) -> float:\n",
+    "\n",
+    "    def get_signal_delay(self, signal: Signal, local_sidereal_time) -> float:\n",
+    "        transform_xyz_uvw = signal.get_xyz_uvw_transform(local_sidereal_time)\n",
     "        baseline_uvw = np.matmul(transform_xyz_uvw, self.baseline_xyz)\n",
-    "        print(f\"Baseline uvw has length {np.linalg.norm(baseline_uvw)}\")\n",
     "        # The vector w points towards the source - so B.s = B.w = (Bx, By, Bz) . (0, 0, 1) = Bz\n",
     "        # w is also a unit vector so to find the angle between these two vectors we just divide by the\n",
     "        # length of the baseline.\n",
     "        # We then need to take the negative as the signal is coming from the source so it is traversing the\n",
     "        # path in reverse\n",
-    "        angle_degrees = np.arccos(baseline_uvw[2] / np.linalg.norm(baseline_uvw)) * 360 / (2 * np.pi)\n",
-    "        print(angle_degrees * 360 / ( 2 * np.pi))\n",
     "        delay_distance = -baseline_uvw[2]\n",
-    "        print(delay_distance) \n",
     "        # geometric delay\n",
-    "        Tg = delay_distance / (3.00 * 10 ** 8)\n",
+    "        Tg = delay_distance / (3.00 * 10**8)\n",
     "        return Tg\n",
     "\n",
     "    @classmethod\n",
     "    def get_all_instances(cls):\n",
     "        return cls.all_antennae\n",
     "\n",
+    "\n",
     "antennae = [\n",
-    "    Antenna(1, np.array([0,0,0])),\n",
+    "    Antenna(1, np.array([0, 0, 0])),\n",
     "    Antenna(2, np.array([4000, 200, 0])),\n",
     "    Antenna(3, np.array([-4000, -200, 10])),\n",
     "]\n",
     "signals = [\n",
-    "    Signal(obs_frequency,1, 0, source_ra, source_dec),\n",
-    "    Signal(obs_frequency * 0.8, 4, np.pi/2, source_ra + 10 * u.hourangle, source_dec + 5 * u.deg),\n",
-    "    Signal(obs_frequency * 1.2, 2, np.pi / 4, source_ra - 20 * u.hourangle, source_dec + 10 * u.deg),\n",
+    "    Signal(obs_frequency, 1, 0, source_ra, source_dec),\n",
+    "    Signal(\n",
+    "        obs_frequency * 0.8,\n",
+    "        4,\n",
+    "        np.pi / 2,\n",
+    "        source_ra + 10 * u.hourangle,\n",
+    "        source_dec + 5 * u.deg,\n",
+    "    ),\n",
+    "    Signal(\n",
+    "        obs_frequency * 1.2,\n",
+    "        2,\n",
+    "        np.pi / 4,\n",
+    "        source_ra - 20 * u.hourangle,\n",
+    "        source_dec + 10 * u.deg,\n",
+    "    ),\n",
     "]\n",
     "\n",
     "\n",
     "received_signals = defaultdict(list)\n",
     "\n",
+    "\n",
     "async def telescope_signal_receivers():\n",
     "    global time\n",
     "    time = 0\n",
     "    global current_time\n",
-    "    \n",
+    "\n",
     "    while True:\n",
     "        all_antennae = Antenna.get_all_instances()\n",
     "        all_signals = Signal.get_all_instances()\n",
     "\n",
-    "        current_time = start_time + timedelta(seconds=time)    \n",
+    "        current_time = start_time + timedelta(seconds=time)\n",
     "        obs_time = Time(current_time.isoformat(), location=vla)\n",
     "\n",
-    "        obs_local_sidereal_time = obs_time.sidereal_time(kind='mean')\n",
+    "        obs_local_sidereal_time = obs_time.sidereal_time(kind=\"mean\")\n",
     "\n",
     "        for antenna in all_antennae:\n",
     "            signal_combined = 0\n",
     "            for signal in all_signals:\n",
-    "                \n",
-    "                hour_angle = obs_local_sidereal_time - signal.source_ra \n",
-    "                \n",
-    "                transform_xyz_uvw = np.array([\n",
-    "                    [np.sin(hour_angle), np.cos(hour_angle), 0],\n",
-    "                    [-np.sin(signal.source_dec) * np.cos(hour_angle), np.sin(signal.source_dec) * np.sin(hour_angle), np.cos(signal.source_dec)],\n",
-    "                    [np.cos(hour_angle) * np.cos(signal.source_dec), -np.sin(hour_angle) * np.cos(signal.source_dec), np.sin(signal.source_dec)]    \n",
-    "                ])\n",
-    "                \n",
-    "                # replace obs_wavelength with signal.wavelength?\n",
-    "                antenna_delay = antenna.get_signal_delay(transform_xyz_uvw)\n",
+    "                antenna_delay = antenna.get_signal_delay(\n",
+    "                    signal, obs_local_sidereal_time\n",
+    "                )\n",
     "                signal_combined += signal.get_signal_value(time - antenna_delay)\n",
     "            received_signals[antenna.id].append(signal_combined)\n",
     "            if len(received_signals[antenna.id]) >= 100:\n",
@@ -165,30 +194,31 @@
     "\n",
     "        time += time_step\n",
     "        await asyncio.sleep(0)\n",
-    "    \n",
+    "\n",
     "\n",
     "def update_plot():\n",
     "    clear_output(wait=True)\n",
     "    for antenna in Antenna.get_all_instances():\n",
-    "        plt.plot(received_signals[antenna.id], label=f\"Antenna {antenna.id}\", color=Antenna.color_map[antenna.id])\n",
+    "        plt.plot(\n",
+    "            received_signals[antenna.id],\n",
+    "            label=f\"Antenna {antenna.id}\",\n",
+    "            color=Antenna.color_map[antenna.id],\n",
+    "        )\n",
     "    plt.title(\"Real-Time Signals\")\n",
     "    plt.xlabel(\"Time (arbitrary units)\")\n",
     "    plt.ylabel(\"Signal Value\")\n",
-    "    plt.xlim(0, 100) \n",
+    "    plt.xlim(0, 100)\n",
     "    plt.ylim(-10.1, 10.1)\n",
     "\n",
     "    plt.legend()\n",
-    "    plt.show() \n",
-    "    plt.pause(0.00001)\n",
+    "    plt.show()\n",
+    "    plt.pause(0.001)\n",
     "\n",
     "\n",
-    "\n",
-    "async def handle_signal_plot():    \n",
+    "async def handle_signal_plot():\n",
     "    while True:\n",
     "        update_plot()\n",
-    "        await asyncio.sleep(.01)\n",
-    "\n",
-    "\n"
+    "        await asyncio.sleep(0.01)"
    ]
   },
   {
@@ -200,10 +230,7 @@
    "source": [
     "async def main():\n",
     "    print(\"starting main loop\")\n",
-    "    await asyncio.gather(\n",
-    "        telescope_signal_receivers(),\n",
-    "        handle_signal_plot()\n",
-    "    )\n",
+    "    await asyncio.gather(telescope_signal_receivers(), handle_signal_plot())\n",
     "\n",
     "\n",
     "await main()"
@@ -297,7 +324,7 @@
    "outputs": [],
    "source": [
     "obs_time = Time(start_time.isoformat(), location=vla)\n",
-    "obs_local_sidereal_time = obs_time.sidereal_time(kind='mean')"
+    "obs_local_sidereal_time = obs_time.sidereal_time(kind=\"mean\")"
    ]
   },
   {
@@ -310,7 +337,15 @@
     "# This is a unit vector that points towards the source\n",
     "# The 90 + 360 - d comes from the fact that np.cos measures from the x-axis\n",
     "# and the bearing is from the y-axis clockwise.\n",
-    "s_enu = np.array([np.cos((90 + 360 - source_altaz.az.degree) * 2 * np.pi/360) * np.cos(source_altaz.alt.degree * 2 * np.pi / 360),  np.sin((90 + 360 - source_altaz.az.degree) * 2 * np.pi / 360) * np.cos(source_altaz.alt.degree * 2 * np.pi / 360), np.sin(source_altaz.alt.degree * 2 * np.pi / 360)])\n",
+    "s_enu = np.array(\n",
+    "    [\n",
+    "        np.cos((90 + 360 - source_altaz.az.degree) * 2 * np.pi / 360)\n",
+    "        * np.cos(source_altaz.alt.degree * 2 * np.pi / 360),\n",
+    "        np.sin((90 + 360 - source_altaz.az.degree) * 2 * np.pi / 360)\n",
+    "        * np.cos(source_altaz.alt.degree * 2 * np.pi / 360),\n",
+    "        np.sin(source_altaz.alt.degree * 2 * np.pi / 360),\n",
+    "    ]\n",
+    ")\n",
     "s_enu = s_enu / np.linalg.norm(s_enu)\n",
     "s_enu"
    ]
@@ -322,16 +357,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "signal_aligned_baseline = np.array([-np.cos((90 + 360 - source_altaz.az.degree) * 2 * np.pi/360) * 4000 * np.cos(source_altaz.alt.degree * 2 * np.pi / 360), -np.sin((90 + 360 - source_altaz.az.degree) * 2 * np.pi/360) * 4000 * np.cos(source_altaz.alt.degree * 2 * np.pi / 360), -4000 * np.sin(source_altaz.alt.degree * 2 * np.pi / 360)])\n",
-    "signal_aligned_baseline = signal_aligned_baseline * 4000 / np.linalg.norm(signal_aligned_baseline)\n",
+    "signal_aligned_baseline = np.array(\n",
+    "    [\n",
+    "        -np.cos((90 + 360 - source_altaz.az.degree) * 2 * np.pi / 360)\n",
+    "        * 4000\n",
+    "        * np.cos(source_altaz.alt.degree * 2 * np.pi / 360),\n",
+    "        -np.sin((90 + 360 - source_altaz.az.degree) * 2 * np.pi / 360)\n",
+    "        * 4000\n",
+    "        * np.cos(source_altaz.alt.degree * 2 * np.pi / 360),\n",
+    "        -4000 * np.sin(source_altaz.alt.degree * 2 * np.pi / 360),\n",
+    "    ]\n",
+    ")\n",
+    "signal_aligned_baseline = (\n",
+    "    signal_aligned_baseline * 4000 / np.linalg.norm(signal_aligned_baseline)\n",
+    ")\n",
     "antennae_signal_aligned_baseline = Antenna(4, signal_aligned_baseline)\n",
     "\n",
     "# Take the negative as the signal is coming from the source and s_enu points towards the source\n",
     "delay_distance = np.dot(-s_enu, antennae_signal_aligned_baseline.baseline_enu)\n",
-    "delay_time = delay_distance / (3.00 * 10 ** 8)\n",
+    "delay_time = delay_distance / (3.00 * 10**8)\n",
     "\n",
-    "print(delay_distance)\n",
-    "print(delay_time)\n",
+    "print(f\"{delay_distance=}\")\n",
+    "print(f\"{delay_time=}\")\n",
     "\n",
     "assert np.isclose(delay_distance, np.linalg.norm(signal_aligned_baseline))"
    ]
@@ -348,12 +395,29 @@
     "\n",
     "# If so, all should pass and there will be no output to this cell.\n",
     "# Otherwise there will be an assertionerror.\n",
-    "assert all([np.isclose(np.arctan(signal_aligned_baseline[1] / signal_aligned_baseline[0]) * 360 / (2 * np.pi), - (source_altaz.az.degree - 270)),\n",
-    "    np.isclose(np.arctan(s_enu[1] / s_enu[0]) * 360 / (2 * np.pi), -(source_altaz.az.degree - 270)),\n",
-    "     np.isclose(np.arcsin(s_enu[2]) * 360 / (2 * np.pi), source_altaz.alt.degree),\n",
-    "     np.isclose(np.arcsin(signal_aligned_baseline[2] / np.linalg.norm(signal_aligned_baseline)) * 360 / (2 * np.pi), - source_altaz.alt.degree),\n",
-    "    ] \n",
-    ")\n"
+    "assert all(\n",
+    "    [\n",
+    "        np.isclose(\n",
+    "            np.arctan(signal_aligned_baseline[1] / signal_aligned_baseline[0])\n",
+    "            * 360\n",
+    "            / (2 * np.pi),\n",
+    "            -(source_altaz.az.degree - 270),\n",
+    "        ),\n",
+    "        np.isclose(\n",
+    "            np.arctan(s_enu[1] / s_enu[0]) * 360 / (2 * np.pi),\n",
+    "            -(source_altaz.az.degree - 270),\n",
+    "        ),\n",
+    "        np.isclose(np.arcsin(s_enu[2]) * 360 / (2 * np.pi), source_altaz.alt.degree),\n",
+    "        np.isclose(\n",
+    "            np.arcsin(\n",
+    "                signal_aligned_baseline[2] / np.linalg.norm(signal_aligned_baseline)\n",
+    "            )\n",
+    "            * 360\n",
+    "            / (2 * np.pi),\n",
+    "            -source_altaz.alt.degree,\n",
+    "        ),\n",
+    "    ]\n",
+    ")"
    ]
   },
   {
@@ -367,24 +431,34 @@
     "# This delay should match the delay_time calculated above.\n",
     "\n",
     "obs_time = Time(start_time.isoformat(), location=vla)\n",
-    "obs_local_sidereal_time = obs_time.sidereal_time(kind='mean')\n",
+    "obs_local_sidereal_time = obs_time.sidereal_time(kind=\"mean\")\n",
     "\n",
     "for antenna in [antennae_signal_aligned_baseline]:\n",
     "    signal_combined = 0\n",
     "    for signal in [signals[0]]:\n",
     "        hour_angle = obs_local_sidereal_time - signal.source_ra\n",
-    "        \n",
-    "        transform_xyz_uvw = np.array([\n",
-    "            [np.sin(hour_angle), np.cos(hour_angle), 0],\n",
-    "            [-np.sin(signal.source_dec) * np.cos(hour_angle), np.sin(signal.source_dec) * np.sin(hour_angle), np.cos(signal.source_dec)],\n",
-    "            [np.cos(hour_angle) * np.cos(signal.source_dec), -np.sin(hour_angle) * np.cos(signal.source_dec), np.sin(signal.source_dec)]    \n",
-    "        ])\n",
+    "\n",
+    "        transform_xyz_uvw = np.array(\n",
+    "            [\n",
+    "                [np.sin(hour_angle), np.cos(hour_angle), 0],\n",
+    "                [\n",
+    "                    -np.sin(signal.source_dec) * np.cos(hour_angle),\n",
+    "                    np.sin(signal.source_dec) * np.sin(hour_angle),\n",
+    "                    np.cos(signal.source_dec),\n",
+    "                ],\n",
+    "                [\n",
+    "                    np.cos(hour_angle) * np.cos(signal.source_dec),\n",
+    "                    -np.sin(hour_angle) * np.cos(signal.source_dec),\n",
+    "                    np.sin(signal.source_dec),\n",
+    "                ],\n",
+    "            ]\n",
+    "        )\n",
     "\n",
     "        # This should be approximately 1 so that it does not change the baseline length when transforming the coordinates.\n",
     "        assert np.isclose(np.linalg.det(transform_xyz_uvw), 1)\n",
-    "        \n",
+    "\n",
     "        # replace obs_wavelength with signal.wavelength?\n",
-    "        antenna_delay = antenna.get_signal_delay(transform_xyz_uvw)\n",
+    "        antenna_delay = antenna.get_signal_delay(signal, obs_local_sidereal_time)\n",
     "\n",
     "antenna_delay"
    ]
