--- a/signal-example-2.ipynb
+++ b/signal-example-2.ipynb
@@ -33,10 +33,13 @@
     "source_dec = 30 * u.deg\n",
     "source = SkyCoord(ra=source_ra, dec=source_dec, frame=\"icrs\")\n",
     "\n",
-    "obs_frequency = 50_000\n",
+    "obs_frequency = 1_000_437\n",
     "obs_wavelength = 3.00 * 10**8 / obs_frequency\n",
+    "print(f\"{obs_wavelength=}\")\n",
     "\n",
-    "time_step = 1 / (2 * obs_frequency)\n",
+    "# Nyquist Theorem - sample at least twice as fast as highest frequency\n",
+    "# you want to measure.\n",
+    "time_step = 1 / (3 * obs_frequency)\n",
     "\n",
     "\n",
     "# convert to x,y,z coordinates where z points to the NCP\n",
@@ -142,8 +145,8 @@
     "\n",
     "antennae = [\n",
     "    Antenna(1, np.array([0, 0, 0])),\n",
-    "    Antenna(2, np.array([4000, 200, 0])),\n",
-    "    Antenna(3, np.array([-4000, -200, 10])),\n",
+    "    Antenna(2, np.array([400, 200, -10])),\n",
+    "    Antenna(3, np.array([-8_000, -200, 10])),\n",
     "]\n",
     "signals = [\n",
     "    Signal(obs_frequency, 1, 0, source_ra, source_dec),\n",
@@ -477,6 +480,22 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "15",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "16",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "17",
    "metadata": {},
    "outputs": [],
    "source": []
